--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="br.edu.forcagame">
+    package="br.edu.linuquiz">
 
     <application
         android:allowBackup="true"
@@ -11,16 +11,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ForcaGame"
+        android:theme="@style/Theme.Linuquiz"
         tools:targetApi="31">
         <activity
-            android:name=".view.MenuActivity"
+            android:name="br.edu.linuquiz.view.MenuActivity"
             android:exported="false" />
         <activity
-            android:name=".view.SignUpActivity"
+            android:name="br.edu.linuquiz.view.SignUpActivity"
             android:exported="false" />
         <activity
-            android:name=".view.SignActivity"
+            android:name="br.edu.linuquiz.view.SignActivity"
             android:exported="true"
             android:theme="@style/Theme.Splash_Screen">
             <intent-filter>
